working registration page

--- a/server_files/UVFit/public/register.html
+++ b/server_files/UVFit/public/register.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+	<!-- Default NavBar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<a class="navbar-brand" href="#">UVFit</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
@@ -40,6 +41,20 @@
 			</div>
 		</div>
 	</nav>
+
+	<!-- Register Form -->
+	<label for="emailAddress">Email Address</label>
+	<input type="text" name="emailAddress" id="emailAddress" placeholder="test@xyz.com">
+	<br>
+	<label for="fullName">Full Name</label>
+	<input type="text" name="fullName" id="fullName" placeholder="Sam Test">
+	<br>
+	<label for="password">Password</label>
+	<input type="password" name="password" id="password" maxlength="50">
+	<br>
+	<input type="submit" id="registerButton" value="Register">
+
+
 </body>
 
 </html>
