--- a/server_files/UVFit/public/index.html
+++ b/server_files/UVFit/public/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+	<!-- Default NavBar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<a class="navbar-brand" href="#">UVFit</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
