mockup more pages

--- a/server_files/UVFit/public/dashboard.html
+++ b/server_files/UVFit/public/dashboard.html
@@ -41,6 +41,12 @@
 			</div>
 		</div>
 	</nav>
+
+	<!-- Register UV Fit Form -->
+	<label for="uvFitDeviceId">UV Fit Device ID</label>
+	<input type="text" name="uvFitDeviceId" id="uvFitDeviceId" placeholder="">
+	<br>
+	<input type="submit" value="Register UVFit">
 </body>
 
 </html>
