--- a/server_files/UVFit/public/login.html
+++ b/server_files/UVFit/public/login.html
@@ -47,9 +47,14 @@
 	<input type="text" name="emailAddress" id="emailAddress" placeholder="test@xyz.com">
 	<br>
 	<label for="password">Password</label>
-	<input type="password" name="password" maxlength="50">
+	<input type="password" id="password" name="password" maxlength="50">
 	<br>
-	<input type="submit" value="Login">
+	<input type="submit" id="loginButton" value="Login">
+
+	<div id="loginErrors"></div>
+
+	<div><a href="register.html">Don't have an account? Register one.</a></div>
+
 </body>
 
 </html>
