--- a/server_files/UVFit/public/register.html
+++ b/server_files/UVFit/public/register.html
@@ -54,7 +54,13 @@
 	<br>
 	<input type="submit" id="registerButton" value="Register">
 
+	<div>
+		<a href="login.html">Already have an account? Log in.</a>
+	</div>
 
+	<div id="registerInfo">
+
+	</div>
 </body>
 
 </html>
