better dashboard integration

--- a/server_files/UVFit/public/dashboard.html
+++ b/server_files/UVFit/public/dashboard.html
@@ -42,6 +42,12 @@
 		</div>
 	</nav>
 
+	<!-- Current UV Fit Device Info -->
+	<div id="currDevInfo">
+		<p id="pDevId"></p>
+		<p id="pApiKey"></p>
+	</div>
+
 	<!-- Allow users to sign out -->
 	<div id="signout">
 		<input type="submit" id="signoutButton" value="Sign Out">
