increase endpoint coverage

--- a/server_files/UVFit/public/login.html
+++ b/server_files/UVFit/public/login.html
@@ -27,7 +27,7 @@
 <body>
 	<!-- Default NavBar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">UVFit</a>
+		<a class="navbar-brand" href="index.html">UVFit</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
 		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
