working display of uv fit data

--- a/server_files/UVFit/public/dashboard.html
+++ b/server_files/UVFit/public/dashboard.html
@@ -71,6 +71,17 @@
 
 	<!-- Combined info box for UV Fit register / update -->
 	<div id="regUpdateInfo"></div>
+
+	<!-- Table for showing recent UV Fit data -->
+	<div id="uvFitDataTableDiv">
+		<table class="table table-striped" id="uvFitDataTable">
+			<th>Timestamp</th>
+			<th>Latitude</th>
+			<th>Longitude</th>
+			<th>Measured UV</th>
+			<th>Measured Speed</th>
+		</table>
+	</div>
 </body>
 
 </html>
