--- a/server_files/UVFit/public/login.html
+++ b/server_files/UVFit/public/login.html
@@ -43,17 +43,22 @@
 	</nav>
 
 	<!-- Login Form -->
-	<label for="emailAddress">Email Address</label>
-	<input type="text" name="emailAddress" id="emailAddress" placeholder="test@xyz.com">
-	<br>
-	<label for="password">Password</label>
-	<input type="password" id="password" name="password" maxlength="50">
-	<br>
-	<input type="submit" id="loginButton" value="Login">
+	<form>
+		<div class="form-group">
+			<label for="emailAddress">Email Address</label>
+			<input type="text" class="form-control" name="emailAddress" id="emailAddress" placeholder="test@xyz.com">
+		</div>
+		<div class="form-group">
+			<label for="password">Password</label>
+			<input type="password" class="form-control" id="password" name="password" maxlength="50">
+		</div>
+		<input type="submit" class="btn btn-primary" id="loginButton" value="Login">
+		<div id="loginErrors"></div>
 
-	<div id="loginErrors"></div>
-
-	<div><a href="register.html">Don't have an account? Register one.</a></div>
+		<div>
+			<a href="register.html">Don't have an account? Register one.</a>
+		</div>
+	<form>
 
 </body>
 
