--- a/server_files/UVFit/public/register.html
+++ b/server_files/UVFit/public/register.html
@@ -43,16 +43,22 @@
 	</nav>
 
 	<!-- Register Form -->
-	<label for="emailAddress">Email Address</label>
-	<input type="text" name="emailAddress" id="emailAddress" placeholder="test@xyz.com">
-	<br>
-	<label for="fullName">Full Name</label>
-	<input type="text" name="fullName" id="fullName" placeholder="Sam Test">
-	<br>
-	<label for="password">Password</label>
-	<input type="password" name="password" id="password" maxlength="50">
-	<br>
-	<input type="submit" id="registerButton" value="Register">
+	<form>
+		<div class="form-group">
+			<label for="emailAddress">Email Address</label>
+			<input type="text" class="form-control" name="emailAddress" id="emailAddress" placeholder="test@xyz.com">
+		</div>
+		<div class="form-group">
+			<label for="fullName">Full Name</label>
+			<input type="text" class="form-control" name="fullName" id="fullName" placeholder="Sam Test">
+		</div>
+		<div class="form-group">
+			<label for="password">Password</label>
+			<input type="password" class="form-control" name="password" id="password" maxlength="50" placeholder="********">
+		</div>	
+		
+		<input type="submit" class="btn btn-primary" id="registerButton" value="Register">
+	</form>
 
 	<div>
 		<a href="login.html">Already have an account? Log in.</a>
