--- a/server_files/UVFit/public/dashboard.html
+++ b/server_files/UVFit/public/dashboard.html
@@ -36,6 +36,7 @@
 			<div class="navbar-nav">
 				<a class="nav-item nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
 				<a class="nav-item nav-link active" href="dashboard.html">Dashboard</a>
+				<a class="nav-item nav-link" href="activity.html">Activity View</a>
 				<a class="nav-item nav-link" href="register.html">Register</a>
 				<a class="nav-item nav-link" href="login.html">Login</a>
 			</div>
@@ -70,7 +71,7 @@
 	</div>
 
 	<!-- Combined info box for UV Fit register / update -->
-	<div id="regUpdateInfo"></div>
+	<div id="regUpdateInfo" class="alert alert-dark" role="alert"></div>
 
 	<!-- Table for showing recent UV Fit data -->
 	<div id="uvFitDataTableDiv">
