--- a/server_files/UVFit/public/register.html
+++ b/server_files/UVFit/public/register.html
@@ -36,6 +36,7 @@
 			<div class="navbar-nav">
 				<a class="nav-item nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
 				<a class="nav-item nav-link" href="dashboard.html">Dashboard</a>
+				<a class="nav-item nav-link" href="activity.html">Activity View</a>
 				<a class="nav-item nav-link active" href="register.html">Register</a>
 				<a class="nav-item nav-link" href="login.html">Login</a>
 			</div>
