--- a/server_files/uvfit/public/activity.html
+++ b/server_files/uvfit/public/activity.html
@@ -19,26 +19,70 @@
 
 	<!-- JQuery Includes -->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+	<!-- Dashboard JS Includes -->
+	<script src="/javascripts/dashboard.js" defer></script>
 </head>
 
 <body>
 	<!-- Default NavBar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">UVFit</a>
+		<a class="navbar-brand" href="index.html">UVFit</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
 		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
 				<a class="nav-item nav-link" href="dashboard.html">Dashboard</a>
-				<a class="nav-item nav-link" href="activity.html">Activity View</a>
+				<a class="nav-item nav-link active" href="activity.html">Activity View</a>
 				<a class="nav-item nav-link" href="register.html">Register</a>
 				<a class="nav-item nav-link" href="login.html">Login</a>
 			</div>
 		</div>
 	</nav>
+
+	<!-- Current UV Fit Device Info -->
+	<div id="currDevInfo">
+		<p id="pDevId"></p>
+		<p id="pApiKey"></p>
+	</div>
+
+	<!-- Allow users to sign out -->
+	<div id="signout">
+		<input type="submit" id="signoutButton" value="Sign Out">
+	</div>
+
+	<!-- Register UV Fit Form -->
+	<div id="registerUVFit">
+		<label for="uvFitDeviceIdReg">UV Fit Device ID</label>
+		<input type="text" name="uvFitDeviceIdReg" id="uvFitDeviceIdReg" placeholder="">
+		<br>
+		<input type="submit" id="registerUVFitButton" value="Register UVFit">
+	</div>
+
+	<!-- Update UV Fit Form -->
+	<div id="updateUVFit">
+		<label for="uvFitDeviceIdUpdate">UV Fit Device ID</label>
+		<input type="text" name="uvFitDeviceIdUpdate" id="uvFitDeviceIdUpdate" placeholder="">
+		<br>
+		<input type="submit" id="updateUVFitButton" value="Update UVFit">
+	</div>
+
+	<!-- Combined info box for UV Fit register / update -->
+	<div id="regUpdateInfo" class="alert alert-dark" role="alert"></div>
+
+	<!-- Table for showing recent UV Fit data -->
+	<div id="uvFitDataTableDiv">
+		<table class="table table-striped" id="uvFitDataTable">
+			<th>Timestamp</th>
+			<th>Latitude</th>
+			<th>Longitude</th>
+			<th>Measured UV</th>
+			<th>Measured Speed</th>
+		</table>
+	</div>
 </body>
 
 </html>
