activity updates on data submit

--- a/server_files/uvfit/public/activity.html
+++ b/server_files/uvfit/public/activity.html
@@ -21,7 +21,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 	<!-- Dashboard JS Includes -->
-	<script src="/javascripts/dashboard.js" defer></script>
+	<script src="/javascripts/activity.js" defer></script>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 		</div>
 	</nav>
 
-	
+
 </body>
 
 </html>
