--- a/server_files/UVFit/public/index.html
+++ b/server_files/UVFit/public/index.html
@@ -39,6 +39,47 @@
 			</div>
 		</div>
 	</nav>
+
+	<div class="container-fluid">
+		<div id="homeSlides" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="/images/uofa.png" alt="UVFit 1">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>The UVFit can change your life!</h5>
+						<p>With excellent UV and activity tracking, you'll be more active than ever!</p>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img src="/images/wilbur.png" alt="UVFit 2">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Using your UVFit is easy!</h5>
+						<p>After setup, using your UVFit is as easy as pressing a button.</p>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img src="/images/wilma.png" alt="UVFit 3">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>What are you waiting for?</h5>
+						<a href="register.html">Register an account now!</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row justify-content-center">
+			<h1 class="text-center">Still not convinced? Watch our KickStarter video!</h1>
+		</div>
+		<div class="row justify-content-center">
+			<div class="col-sm-10">
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YbJOTdZBX1g" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </body>
 
 </html>
