--- a/server_files/UVFit/public/register.html
+++ b/server_files/UVFit/public/register.html
@@ -44,27 +44,45 @@
 	</nav>
 
 	<!-- Register Form -->
-	<div class="form-group">
-		<label for="emailAddress">Email Address</label>
-		<input type="text" class="form-control" name="emailAddress" id="emailAddress" placeholder="test@xyz.com">
-	</div>
-	<div class="form-group">
-		<label for="fullName">Full Name</label>
-		<input type="text" class="form-control" name="fullName" id="fullName" placeholder="Sam Test">
-	</div>
-	<div class="form-group">
-		<label for="password">Password</label>
-		<input type="password" class="form-control" name="password" id="password" maxlength="50" placeholder="********">
-	</div>	
-	
-	<input type="submit" class="btn btn-primary" id="registerButton" value="Register">
-
-	<div>
-		<a href="login.html">Already have an account? Log in.</a>
-	</div>
-
-	<div id="registerInfo">
-
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm">
+				<div class="jumbotron jumbotron-fluid">
+					<div class="container">
+						<h1 class="display-4">UVFit Register</h1>
+						<a class="lead" href="login.html">Already have an account? Log in.</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm">
+				<div class="form-group">
+					<label for="emailAddress">Email Address</label>
+					<input type="text" class="form-control" name="emailAddress" id="emailAddress" placeholder="test@xyz.com">
+				</div>
+			</div>
+			<div class="col-sm">
+				<div class="form-group">
+					<label for="fullName">Full Name</label>
+					<input type="text" class="form-control" name="fullName" id="fullName" placeholder="Sam Test">
+				</div>
+			</div>
+			<div class="col-sm">
+				<div class="form-group">
+					<label for="password">Password</label>
+					<input type="password" class="form-control" name="password" id="password" maxlength="50" placeholder="********">
+				</div>
+			</div>
+		</div>
+		<div class="row justify-content-center">
+			<div class="col-sm text-center">
+				<input type="submit" class="btn btn-primary btn-lg" id="registerButton" value="Register">
+			</div>
+		</div>
+		<div class="row justify-content-center">
+			<div class="col-sm text-center" id="registerInfo"></div>
+		</div>
 	</div>
 </body>
 
