style changes and fix uvfitdata route

--- a/server_files/UVFit/public/login.html
+++ b/server_files/UVFit/public/login.html
@@ -50,7 +50,10 @@
 				<div class="jumbotron jumbotron-fluid">
 					<div class="container">
 						<h1 class="display-4">UVFit Login</h1>
-						<a class="lead" href="register.html">Don't have an account? Register one.</a>
+						<hr class="my-4">
+						<p class="lead">
+							<a class="btn btn-primary btn-lg" href="register.html" role="button">Don't have an account? Register one.</a>
+						</p>
 					</div>
 				</div>
 			</div>
