--- a/server_files/UVFit/public/register.html
+++ b/server_files/UVFit/public/register.html
@@ -50,7 +50,10 @@
 				<div class="jumbotron jumbotron-fluid">
 					<div class="container">
 						<h1 class="display-4">UVFit Register</h1>
-						<a class="lead" href="login.html">Already have an account? Log in.</a>
+						<hr class="my-4">
+						<p class="lead">
+							<a class="btn btn-primary btn-lg" href="login.html" role="button">Already have an account? Log in.</a>
+						</p>
 					</div>
 				</div>
 			</div>
