--- a/server_files/UVFit/public/index.html
+++ b/server_files/UVFit/public/index.html
@@ -41,35 +41,26 @@
 	</nav>
 
 	<div class="container-fluid">
-		<div id="homeSlides" class="carousel slide" data-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="/images/uofa.png" alt="UVFit 1">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>The UVFit can change your life!</h5>
-						<p>With excellent UV and activity tracking, you'll be more active than ever!</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="/images/wilbur.png" alt="UVFit 2">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Using your UVFit is easy!</h5>
-						<p>After setup, using your UVFit is as easy as pressing a button.</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="/images/wilma.png" alt="UVFit 3">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>What are you waiting for?</h5>
-						<a href="register.html">Register an account now!</a>
+		<div class="row">
+			<div class="col-sm">
+				<div class="jumbotron jumbotron-fluid">
+					<div class="container">
+						<h1 class="display-4">Welcome to UVFit!</h1>
+						<p class="lead">An innovative new technology, the UVFit device allows wearers to easily track their UV exposure
+							and their daily activities.</p>
+						<hr class="my-4">
+						<p class="lead">
+							<a class="btn btn-primary btn-lg" href="login.html" role="button">Already have an account? Log in.</a>
+							<a class="btn btn-primary btn-lg" href="register.html" role="button">Don't have an account? Register one.</a>
+						</p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="container-fluid">
 		<div class="row justify-content-center">
-			<h1 class="text-center">Still not convinced? Watch our KickStarter video!</h1>
+			<div class="col-sm-10">
+				<h1 class="text-center">Still not convinced? Watch our KickStarter video!</h1>
+			</div>
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-sm-10">
