--- a/server_files/UVFit/public/index.html
+++ b/server_files/UVFit/public/index.html
@@ -50,8 +50,8 @@
 							and their daily activities.</p>
 						<hr class="my-4">
 						<p class="lead">
-							<a class="btn btn-primary btn-lg" href="login.html" role="button">Already have an account? Log in.</a>
-							<a class="btn btn-primary btn-lg" href="register.html" role="button">Don't have an account? Register one.</a>
+							<a class="btn btn-primary btn-lg" href="login.html" role="button">Account login.</a>
+							<a class="btn btn-primary btn-lg" href="register.html" role="button">Register an account.</a>
 						</p>
 					</div>
 				</div>
