--- a/server_files/UVFit/public/login.html
+++ b/server_files/UVFit/public/login.html
@@ -52,7 +52,7 @@
 						<h1 class="display-4">UVFit Login</h1>
 						<hr class="my-4">
 						<p class="lead">
-							<a class="btn btn-primary btn-lg" href="register.html" role="button">Don't have an account? Register one.</a>
+							<a class="btn btn-primary btn-lg" href="register.html" role="button">No account? Register one.</a>
 						</p>
 					</div>
 				</div>
