--- a/server_files/UVFit/public/dashboard.html
+++ b/server_files/UVFit/public/dashboard.html
@@ -50,7 +50,8 @@
 				<input type="submit" class="btn btn-primary btn-lg" id="signoutButton" value="Sign Out">
 			</div>
 		</div>
-		<h1 class="display-4">UVFit Login</h1>
+		<h1 class="display-4">Your Account Info</h1>
+		<hr class="my-4">
 		<div class="row">
 			<div class="col-sm">
 				<p id="pAcctEmail"></p>
@@ -62,6 +63,9 @@
 				<p id="pAcctThreshold"></p>
 			</div>
 		</div>
+		<br>
+		<h1 class="display-4">Your UVFit Info</h1>
+		<hr class="my-4">
 		<div class="row">
 			<div class="col-sm">
 				<p id="pDevId" style="word-break: break-all;"></p>
@@ -73,7 +77,7 @@
 		<div class="row" id="registerUVFit">
 			<!-- Register UV Fit Form -->
 			<div class="col-sm">
-				<label for="uvFitDeviceIdReg">Register UV Fit Device ID</label>
+				<label for="uvFitDeviceIdReg">New UV Fit Device ID</label>
 				<input type="text" name="uvFitDeviceIdReg" id="uvFitDeviceIdReg" placeholder="">
 			</div>
 			<div class="col-sm">
@@ -83,7 +87,7 @@
 		<div class="row" id="updateUVFit">
 			<!-- Update UV Fit Form -->
 			<div class="col-sm">
-				<label for="uvFitDeviceIdUpdate">Update UV Fit Device ID</label>
+				<label for="uvFitDeviceIdUpdate">New UV Fit Device ID</label>
 				<input type="text" name="uvFitDeviceIdUpdate" id="uvFitDeviceIdUpdate" placeholder="">
 			</div>
 			<div class="col-sm">
@@ -94,9 +98,12 @@
 			<!-- Combined info box for UV Fit register / update -->
 			<div id="regUpdateInfo" class="alert alert-dark" role="alert"></div>
 		</div>
+		<br>
+		<h1 class="display-4">Update Your Data</h1>
+		<hr class="my-4">
 		<div class="row" id="sendUVThreshold">
 			<div class="col-sm">
-				<label for="thresholdUpdate">Set Threshold</label>
+				<label for="thresholdUpdate">New Threshold</label>
 				<input type="text" name="thresholdUpdate" id="thresholdUpdate" placeholder="">
 			</div>
 			<div class="col-sm">
