I can't do math

--- a/server_files/uvfit/public/activity.html
+++ b/server_files/uvfit/public/activity.html
@@ -80,11 +80,7 @@
                       var td2 = "<td>"+this.response.submittedData[i]["duration"].toFixed(2)+"</td>";
                       var td3 = "<td>"+this.response.submittedData[i]["caloriesBurned"].toFixed(2)+"</td>";
                       var td4 = "<td>"+this.response.submittedData[i]["totalUV"].toFixed(2)+"</td>";
-                      var td45 = "<td><ul id="dropdown2" class="dropdown-content">
-                                    <li id="walking">Walking</li>
-                                    <li id="running">Running</li>
-                                    <li id="biking">Biking</li>
-                                  </ul></td>";
+                      var td45 = "<td><ul id=\"dropdown2\" class=\"dropdown-content\"><li id=\"walking\">Walking</li><li id=\"running\">Running</li><li id=\"biking\">Biking</li></ul></td>";
                       var td5 = "<td><button class=\"changeActivity\">Change Activity</button></td>";
                       
                       var xhr = new XMLHttpRequest();
@@ -112,7 +108,7 @@
                   	xhr.setRequestHeader("Content-type", "application/json");
                   	xhr.send(JSON.stringify({}));
                   	
-                  	$("#activityTable").append(tr+td1+td2+td3+td4+td4.5+td5+"</tr>");
+                  	$("#activityTable").append(tr+td1+td2+td3+td4+td45+td5+"</tr>");
                   }
           	});
           	xhr.responseType = "json";
